# merfishcodebooks

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  validation_report.md
R/: 0_CodebookGeneratingPipeline.R  1_CodebookEvaluator_HammingDistanceChecker.R  CodebookHDSorter.R  ConvertBinarytoSet.R  ConvertSettoBinary.R  EvaluateCodebookHD.R  ImportStartingCodebook_LaJolla.R  IterativeSetExchangeLoop.R  JohnsonBoundCalculator.R  PruningToConformToMinHD.R  README.md  SimulatingCode.R
codebooks_hw4_minhd4/: summary.md
codebooks_hw4_minhd4/v09/: 9Bit_HW4_HD4_finalsize18Binary.csv  9Bit_HW4_HD4_finalsize18Set.csv  meta_9Bit_HW4_HD4_finalsize18.txt
codebooks_hw4_minhd4/v12/: 12Bit_HW4_HD4_finalsize51Binary.csv  12Bit_HW4_HD4_finalsize51Set.csv  meta_12Bit_HW4_HD4_finalsize51.txt
codebooks_hw4_minhd4/v15/: 15Bit_HW4_HD4_finalsize105Binary.csv  15Bit_HW4_HD4_finalsize105Set.csv  meta_15Bit_HW4_HD4_finalsize105.txt
codebooks_hw4_minhd4/v18/: 18Bit_HW4_HD4_finalsize198Binary.csv  18Bit_HW4_HD4_finalsize198Set.csv  meta_18Bit_HW4_HD4_finalsize198.txt
codebooks_hw4_minhd4/v21/: 21Bit_HW4_HD4_finalsize315Binary.csv  21Bit_HW4_HD4_finalsize315Set.csv  meta_21Bit_HW4_HD4_finalsize315.txt
codebooks_hw4_minhd4/v24/: 24Bit_HW4_HD4_finalsize494Binary.csv  (+2 more)
docs/: algorithm.md  output-format.md
scripts/: fetch_lajolla_covers.py  precompute_hw4_minhd4.py  precompute_hw6_minhd4.py  validate_codebooks.py
tests/: test_bitmask.py  test_exchange.py  test_hd.py  test_johnson.py  test_lajolla.py  test_pipeline.py  test_pruning.py  test_sorter.py  test_validate.py
(+80 files in other folders)
